kyy-k8s-config/src/app/ssr/nuxt-kc/nuxt-kc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nuxt-kc
  name: nuxt-kc
spec:
  ports:
    - name: "3000"
      port:  3000
      targetPort: 3000
  selector:
    app: nuxt-kc
